[build-system]
requires = ["scikit-build-core>=0.9", "cmake>=3.18,<4", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pyapproxmc"
version = "4.2.0"
description = "Bindings to ApproxMC, an approximate model counter"
keywords = ["sat", "model-counting"]
license = { file = "LICENSE" }
maintainers = [{name="Mate Soos", email="soos.mate@gmail.com"}]
authors = [{name="Mate Soos", email="soos.mate@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
    ]
requires-python = ">=3.9"
readme = "python/README.md"

[tool.scikit-build]
cmake.build-type = "Release"
# BUILD_SHARED_LIBS=OFF → all deps become static libs linked into the extension
# CMAKE_POSITION_INDEPENDENT_CODE=ON → required so static libs can be linked into a .so
cmake.args = [
    "-DBUILD_PYTHON_EXTENSION=ON",
    "-DENABLE_TESTING=OFF",
    "-DBUILD_SHARED_LIBS=OFF",
    "-DSTATIC_BINARY=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
    "-DNOZLIB=ON",
    "-DCMAKE_C_COMPILER_LAUNCHER=ccache",
    "-DCMAKE_CXX_COMPILER_LAUNCHER=ccache",
    "-DCMAKE_PREFIX_PATH=/usr/local",
]
wheel.packages = []          # pure-Python packages to include (none; extension only)
install.components = ["python"]  # only install the pyapproxmc.so, not the full library

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux* *i686"
build-frontend = "build"
test-requires = "pytest"
# cd /tmp so {project} is never on sys.path; the test imports the installed wheel, not the build tree .so
test-command = "cd /tmp && pytest {project}/python/tests"

[tool.cibuildwheel.linux]
# manylinux_2_34 = AlmaLinux 9; gmp-devel/mpfr-devel ship .pc files so pkg-config works.
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"
before-all = "yum install -y epel-release && yum install -y ccache gmp-devel mpfr-devel"
# CCACHE_DIR must be under /project so the host-side actions/cache step can reach it.
environment = { CCACHE_DIR = "/project/.ccache" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# GMP is not a macOS system library; brew installs it and delocate bundles it.
before-all = "brew install gmp mpfr ccache || true"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
