[metadata]
name = pyapproxmc
version = 4.1.0
author = Mate Soos
author_email= soos.mate@gmail.com
maintainer = Mate Soos
maintainer_email= soos.mate@gmail.com
description = Bindings to CryptoMiniSat, an advanced SAT solver
long_description = file:python/README.rst
license = MIT
license_file = LICENSE
keywords = sat, model-counting
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Topic :: Utilities
project_urls =
    changelog = github.com/meelgroup/approxmc/releases
    documentation = github.com/meelgroup/approxmc
    homepage = www.msoos.org
    repository = github.com/meelgroup/approxmc

[options]
python_requires = >=3.5
